Fix spacing in components and set favicon (#35)

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -4,6 +4,7 @@
   bottom: 0%;
   height: 1px;
   border: 0;
-  margin-top: 2px;
+  margin-top: 6px;
   background: #cccccc;
+  margin-bottom: 1.5em;
 }
